--- a/index.html
+++ b/index.html
@@ -1,4 +1,33 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+ </head>
+ <body>
+    <h1>Francesco Portfolio</h1>
+    <h2>I'm a Web Devoloper</h2>
+    <a href="name">Movie Ranking Project</a>
+    <h3>The Best Movies According to me</h3>
+    <h4>My top 3 movies of all-time.</h4>
+    <hr/>
+    <h5>Spirited Away</h5>
+    <p>This is my favorite anime</p>
+    <h5>Ex Machina</h5>
+    <p>Really cool sci-fi movie</p>
+    <h5>Drive</h5>
+    <p>Super beautiful film</p>
+
+    <a href = "./public/birthday-invite.html"><h2>Birthday Invite Project</h2></a>
+    <h3>It's My Birthday!</h3>
+    <img src = "assets/images/birthday-invite.png" width="200">
+    <hr/>
+    <a href="public/about.html">About me</a>
+    <a href = "public/contact.html">Contact Me</a>
+ </body>
+ </html>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
