--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
  </head>
  <body>
-    <h1>Francesco Portfolio</h1>
-    <h2>I'm a Web Devoloper</h2>
+    <h1>Francesco & Dorina  Portfolio</h1>
+    <h2>We are a Web Devoloper and a Economist Specialist</h2>
     <a href="name">Movie Ranking Project</a>
     <h3>The Best Movies According to me</h3>
     <h4>My top 3 movies of all-time.</h4>
