--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
  <body>
     <h1>Francesco & Dorina  Portfolio</h1>
     <h2>We are a Web Devoloper and a Economist Specialist</h2>
-    <a href="name">Movie Ranking Project</a>
-    <h3>The Best Movies According to me</h3>
-    <h4>My top 3 movies of all-time.</h4>
+    <a href="name">Web Devoleper Projects</a>
+    <h3>Our best Websites according to us</h3>
+    <h4>My top 3 Websites of all-time.</h4>
     <hr/>
     <h5>Spirited Away</h5>
     <p>This is my favorite anime</p>
@@ -22,8 +22,8 @@
     <p>Super beautiful film</p>
 
     <a href = "./public/birthday-invite.html"><h2>Birthday Invite Project</h2></a>
-    <h3>It's My Birthday!</h3>
-    <img src = "assets/images/birthday-invite.png" width="200">
+    <h3>I'm not born yet.</h3>
+    <img src = "assets/images/FD.png" width="200">
     <hr/>
     <a href="public/about.html">About me</a>
     <a href = "public/contact.html">Contact Me</a>
